methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:10: error: type mismatch;
 found   : Unit
 required: Boolean
        return sawBaggle= true
                        ^MethodsReturning:18: error: not found: value seenBaggle
        return seenBaggle
               ^MethodsReturning:17: error: type mismatch;
 found   : Unit
 required: Boolean
      if (sawBaggle){
      ^